Address PR 447 review comments